[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonneuralx"
version = "1.0.0"
description = "Pure non-neural machine learning toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.8.0",
  "matplotlib>=3.5.0",
  "scikit-learn>=1.0.0"
]

[tool.setuptools]
packages = ["non_neuralx"]
