[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonneuralx"
version = "1.0.0"
description = "Pure non-neural machine learning toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.21.0",
  "scipy>=1.8.0",
  "matplotlib>=3.5.0",
  "scikit-learn>=1.0.0",
  "networkx>=3.0.0",
  "torch>=2.0.0"
]

[project.optional-dependencies]
hybrid = [
  "torch>=2.0.0",
  "faiss-cpu>=1.7.0"
]
full = [
  "torch>=2.0.0",
  "faiss-cpu>=1.7.0",
  "sympy>=1.12",
  "matplotlib>=3.5.0",
  "joblib>=1.3.0"
]

[tool.setuptools.packages.find]
include = ["non_neuralx*"]
